--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a href="register">Register</a>
             </li>
             <li data-access-level="accessLevels.user" active-nav>
-              <a href="/ng-login-test2/">Home</a>
+              <a href="/ng-login/">Home</a>
             </li>
             <li data-access-level="accessLevels.user" active-nav="nestedTop">
               <a href="private">Private</a>
