--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-ng-app="angular-client-side-auth">
+<html lang="en" data-ng-app="xpLoginApp">
   <head>
     <base href="/ng-login/">
     <meta http-equiv="cache-control" content="no-cache" />
@@ -24,30 +24,30 @@
   </head>
   <body data-ng-cloak="">
 
-    <div data-ng-controller="NavCtrl" class="navbar">
+    <div data-ng-controller="XpNavCtrl" class="navbar">
       <div class="navbar-inner">
         <div class="container-fluid">
           <ul class="nav nav-tabs">
-            <li data-access-level="accessLevels.anon" active-nav>
+            <li data-xp-access-level="accessLevels.anon" data-xp-active-nav="">
               <a href="login">Log in</a>
             </li>
-            <li data-access-level="accessLevels.anon" active-nav>
+            <li data-xp-access-level="accessLevels.anon" data-xp-active-nav="">
               <a href="register">Register</a>
             </li>
-            <li data-access-level="accessLevels.user" active-nav>
+            <li data-xp-access-level="accessLevels.user" data-xp-active-nav="">
               <a href="/ng-login/">Home</a>
             </li>
-            <li data-access-level="accessLevels.user" active-nav="nestedTop">
+            <li data-xp-access-level="accessLevels.user" data-xp-active-nav="nestedTop">
               <a href="private">Private</a>
             </li>
-            <li data-access-level="accessLevels.admin" active-nav>
+            <li data-xp-access-level="accessLevels.admin" data-xp-active-nav="">
               <a href="admin">Admin</a>
             </li>
-            <li data-access-level="accessLevels.user">
+            <li data-xp-access-level="accessLevels.user">
               <a href="" data-ng-click="logout()">Log out</a>
             </li>
 
-            <div id="userInfo" data-access-level="accessLevels.user" class="pull-right">
+            <div id="userInfo" data-xp-access-level="accessLevels.user" class="pull-right">
             Welcome&nbsp;<strong>{{ user.username }}&nbsp;</strong>
             <span data-ng-class="{'label-info': user.role.title == userRoles.user.title, 'label-success': user.role.title == userRoles.admin.title}" class="label">{{ user.role.title }}</span>
             </div>
