--- a/index.html
+++ b/index.html
@@ -68,12 +68,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular-cookies.min.js"></script>
     <script src="js/libs/angular-ui-router.js"></script>
+
     <script src="js/routingConfig.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/services/services.js"></script>
-    <script src="js/controllers/controllers.js"></script>
-    <script src="js/filters/filters.js"></script>
-    <script src="js/directives/directives.js"></script>
+    <script src="js/services/xpAuth.js"></script>
+    <script src="js/services/xpUsers.js"></script>
+    <script src="js/controllers/xpAdminCtrl.js"></script>
+    <script src="js/controllers/xpLoginCtrl.js"></script>
+    <script src="js/controllers/xpNavCtrl.js"></script>
+    <script src="js/controllers/xpRegisterCtrl.js"></script>
+    <script src="js/directives/xpAccessLevel.js"></script>
+    <script src="js/directives/xpActiveNav.js"></script>
     
   </body>
 </html>
