--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
     <script src="../mcg2/app/bower_components/angular-ui-utils/ui-utils.js"></script>
 
     <script src="js/app.js"></script>
-    <script src="js/services/xpAuthPermissions.js"></script>
+    <script src="js/services/xpAuthPermissions.provider.js"></script>
     <script src="js/config.js"></script>
-    <script src="js/services/xpAuth.js"></script>
-    <script src="js/services/xpUsers.js"></script>
-    <script src="js/services/xpApiRouterFactory.js"></script>
-    <script src="js/controllers/xpAdminCtrl.js"></script>
-    <script src="js/controllers/xpLoginCtrl.js"></script>
-    <script src="js/controllers/xpNavCtrl.js"></script>
-    <script src="js/controllers/xpRegisterCtrl.js"></script>
-    <script src="js/directives/xpAccessLevel.js"></script>
-    <script src="js/directives/xpActiveNav.js"></script>
+    <script src="js/services/xpAuth.factory.js"></script>
+    <script src="js/services/xpUsers.factory.js"></script>
+    <script src="js/services/xpApiRouter.factory.js"></script>
+    <script src="js/controllers/xpAdmin.controller.js"></script>
+    <script src="js/controllers/xpLogin.controller.js"></script>
+    <script src="js/controllers/xpNav.controller.js"></script>
+    <script src="js/controllers/xpRegister.controller.js"></script>
+    <script src="js/directives/xpAccessLevel.directive.js"></script>
+    <script src="js/directives/xpActiveNav.directive.js"></script>
 
   </body>
 </html>
